--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,19 @@
     <string name="mostly_sunny">Mostly sunny</string>
     <string name="from">from</string>
     <string name="to">to</string>
+    <string name="saint_petersburg">Saint Petersburg</string>
+    <string name="moscow">Moscow</string>
+    <string name="new_york">New York</string>
+    <string name="Select_city">Select city</string>
+    <string name="Add_city">Add city</string>
+    <string name="show_wind_speed">Show wind speed</string>
+    <string name="wind_speed">Wind speed</string>
+    <string name="temperature">Temperature</string>
+    <string name="weather">Weather</string>
+    <string name="pressure">Pressure</string>
+    <string name="settings">Settings</string>
+    <string name="mmHg">mmHg</string>
+    <string name="Pa">Pa</string>
+    <string name="ms">m/s</string>
+    <string name="kmh">km/h</string>
 </resources>
