toast/log/saving

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -20,4 +20,5 @@
     <string name="Pa">Па</string>
     <string name="ms">м/с</string>
     <string name="kmh">км/ч</string>
+    <string name="weather_app">Погодное приложение</string>
 </resources>
