--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="Pa">Pa</string>
     <string name="ms">m/s</string>
     <string name="kmh">km/h</string>
+    <string name="weather_app">Weather App</string>
 </resources>
