--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -33,6 +33,12 @@
     <string name="Cancel">Отмена</string>
     <string name="dialog_message">Ошибка соединения!</string>
     <string name="dialog_message_2">Закрыть приложение?</string>
+    <string name="no_connection">Нет сети</string>
+    <string name="low_battery">Низкий заряд батареи</string>
+    <string name="Weather_in_current_position">Погода в текущем месте</string>
+    <string name="hot_weather">Сегодня очень жарко, будте осторожны!</string>
+    <string name="cold_weather">Сегодня очень холодно, брррр!</string>
+    <string name="weather_warning">Погодное предупреждение</string>
     <string name="winter_img">https://images.unsplash.com/photo-1503517245364-78fc9a9cdd37?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=633&amp;q=80</string>
     <string name="autumn_img">"https://images.unsplash.com/photo-1507629221898-576a56b530bb?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd&amp;auto=format&amp;fit=cro&amp;w=634&amp;q=80"</string>
     <string name="spring_img">https://images.unsplash.com/photo-1523224042829-4731dd15a3bb?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=634&amp;q=80</string>
